--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,2 @@
 theme: jekyll-theme-midnight
+<iframe src="https://discordapp.com/widget?id=577225056334381079&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
